# cov_pred_py

./: Dockerfile  block_range.json  pyproject.toml
cov_pred_py/: main.py
cov_pred_py/db/: database.py
cov_pred_py/module/: Trainer.py  dnn_classifier.py  identify_execute_block.py  vectorize_log.py
