[project]
name = "cov-pred-py"
version = "0.1.0"
description = ""
authors = [
    {name = "satorukano",email = "kiritomo0206@icloud.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "sortedcontainers (>=2.4.0,<3.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "torch (>=2.6.0,<3.0.0)",
    "transformers (>=4.49.0,<5.0.0)",
    "numpy (>=2.2.3,<3.0.0)",
    "sklearn (>=0.0.post12,<0.1)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
